plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.myhaimi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//rest-api
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	//mysql connection
	implementation 'org.springframework.data:spring-data-jpa:4.0.0-M1'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.3'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'

	//OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.modelmapper:modelmapper:3.1.0'


}

tasks.named('test') {
	useJUnitPlatform()
}
